Fix: Updating LittleFS OTA now actually works, previously esp_partition_erase would sometimes fail and therefore no new data would be written to the parition.

--- a/firmware_espidf/data/index.html
+++ b/firmware_espidf/data/index.html
@@ -400,7 +400,7 @@
 
     <section class="section">
       <div class="container">
-        <h1 class="text-4xl font-medium text-gray-50" id="page-title">NSPanelManager (Sonoff NSPanel node)</h1>
+        <h1 class="text-4xl font-medium text-gray-50" id="page-title">NSPanelManager panel</h1>
       </div>
     </section>
 
